# rtplot

./: .gitignore  LICENSE  README.md  how_to_update_poetry.txt  pyproject.toml  setup.py
.github/workflows/: build-binaries.yml  build-windows-exe.yml
docs/: api.md  networking.md
examples/: README.md
examples/01_hello_world/: README.md  run.py  run_typed.py  snapshot.html
examples/02_multiple_subplots/: README.md  run.py  run_typed.py  snapshot.html
examples/03_interactive_controls/: README.md  run.py  run_typed.py  snapshot.html
examples/04_typed_configuration/: README.md  run.py  run_dict.py
packaging/: rtplot-server.spec
padapt.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
presentation/: rtplot_lab_slides.html
presentation/examples/: 00_sine_controls.py  01_sine_stream.py  02_gait_subplots.py  03_interactive_controls.py  04_batched_sender.py
rtplot/: client.py  example_code.py  interactive_test.py  plot_log.py  server.py  server_browser.py  server_browser_gui.py  simplest_test.py  simplest_test_local.py  simplest_test_pi.py
rtplot/static/: index.html
tests/: test_change_port_client.py  test_communication.py
