[tool.poetry]
name = "better-rtplot"
version = "0.4.10"
description = ""
authors = ["jmontp <jmontp@umich.edu>"]
license = "GPL V3.0"
readme = "README.md"
packages = [{include = "rtplot"}]
include = ["rtplot/static/*", "rtplot/static/katex/*", "rtplot/static/katex/fonts/*"]

[tool.poetry.dependencies]
python = ">= 3.9, < 3.13"
numpy = ">= 1.23.5"
pyzmq = ">= 25.0.0"

pyqtgraph = {version = ">= 0.13.0", optional = true}
pyside6 = {version = "> 6.4.0", optional = true}
aiohttp = {version = ">= 3.9.0", optional = true}
psutil = {version = ">= 5.9.0", optional = true}

[tool.poetry.extras]
server = ["pyqtgraph", "pyside6"]
browser = ["aiohttp", "psutil"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
